# rust_

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  ESP32_COMPLETE_FINAL.ino  ESP32_IMPROVED_DISPLAY.ino  ESP32_MATH_EXAMPLE.ino  LIBRARIES_INSTALL.txt  README.md  railway.toml  system_prompt.txt
src/: audio.rs  groq.rs  main.rs  morse.rs
static/: app.js  index.html  style.css
