[package]
name = "voice-assistant"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voice-assistant"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "fs", "set-header"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
hound = "3.5"
tempfile = "3.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"